--- a/Dividend events.html
+++ b/Dividend events.html
@@ -27,7 +27,7 @@
         <body>
             <div>
                 <h2> Top dividend events </h2>
-                <p><em> 2022-12-29 11:00:33.799664 </em></p>
+                <p><em> 2022-12-29 11:15:30.716793 </em></p>
                 <h4>Sorted by newest notification<h4><table border="1" class="dataframe">
   <thead>
     <tr style="text-align: right;">
@@ -51,6 +51,40 @@
   <tbody>
     <tr>
       <th>0</th>
+      <td>DDV</td>
+      <td>DDV - Trả cổ tức Đợt 1 năm 2022 bằng tiền 500 đồng/cổ phiếu</td>
+      <td>2022-12-29</td>
+      <td>2023-01-13</td>
+      <td>500.0</td>
+      <td>0.0</td>
+      <td>2023-01-12</td>
+      <td>14 days</td>
+      <td>8900.0</td>
+      <td>8700.0</td>
+      <td>5.75</td>
+      <td>-2.25</td>
+      <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=DDV" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
+      <td><a href="https://simplize.vn/company/DDV" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
+    </tr>
+    <tr>
+      <th>1</th>
+      <td>DPH</td>
+      <td>DPH - Trả cổ tức Đợt 1 năm 2022 bằng tiền 1500 đồng/cổ phiếu</td>
+      <td>2022-12-29</td>
+      <td>2023-01-11</td>
+      <td>1500.0</td>
+      <td>0.0</td>
+      <td>2023-01-10</td>
+      <td>12 days</td>
+      <td>35000.0</td>
+      <td>35000.0</td>
+      <td>4.29</td>
+      <td>0.00</td>
+      <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=DPH" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
+      <td><a href="https://simplize.vn/company/DPH" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
+    </tr>
+    <tr>
+      <th>2</th>
       <td>CSV</td>
       <td>CSV - Trả cổ tức Đợt 1 năm 2022 bằng tiền 1000 đồng/cổ phiếu</td>
       <td>2022-12-27</td>
@@ -67,7 +101,7 @@
       <td><a href="https://simplize.vn/company/CSV" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>1</th>
+      <th>3</th>
       <td>DHA</td>
       <td>DHA - Trả cổ tức Đợt 1 năm 2022 bằng tiền 3000 đồng/cổ phiếu</td>
       <td>2022-12-27</td>
@@ -77,14 +111,14 @@
       <td>2023-01-02</td>
       <td>4 days</td>
       <td>36000.0</td>
-      <td>35850.0</td>
-      <td>8.37</td>
-      <td>-0.42</td>
+      <td>35800.0</td>
+      <td>8.38</td>
+      <td>-0.56</td>
       <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=DHA" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
       <td><a href="https://simplize.vn/company/DHA" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>2</th>
+      <th>4</th>
       <td>QNS</td>
       <td>QNS - Trả cổ tức Đợt 2 năm 2022 bằng tiền 1000 đồng/cổ phiếu</td>
       <td>2022-12-26</td>
@@ -94,14 +128,14 @@
       <td>2023-01-03</td>
       <td>5 days</td>
       <td>36800.0</td>
-      <td>36300.0</td>
-      <td>2.75</td>
-      <td>-1.36</td>
+      <td>36200.0</td>
+      <td>2.76</td>
+      <td>-1.63</td>
       <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=QNS" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
       <td><a href="https://simplize.vn/company/QNS" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>3</th>
+      <th>5</th>
       <td>TTD</td>
       <td>TTD - Trả cổ tức Đợt 2 năm 2022 bằng tiền 1000 đồng/cổ phiếu</td>
       <td>2022-12-23</td>
@@ -118,7 +152,7 @@
       <td><a href="https://simplize.vn/company/TTD" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>4</th>
+      <th>6</th>
       <td>FOX</td>
       <td>Trả cổ tức bằng tiền mặt</td>
       <td>2022-12-22</td>
@@ -135,7 +169,7 @@
       <td><a href="https://simplize.vn/company/FOX" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>5</th>
+      <th>7</th>
       <td>ND2</td>
       <td>ND2 - Trả cổ tức Đợt 1 năm 2022 bằng tiền 1000 đồng/cổ phiếu</td>
       <td>2022-12-22</td>
@@ -152,7 +186,7 @@
       <td><a href="https://simplize.vn/company/ND2" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>6</th>
+      <th>8</th>
       <td>GKM</td>
       <td>GKM - Phát hành cổ phiếu trả cổ tức tỷ lệ 10%</td>
       <td>2022-12-22</td>
@@ -169,7 +203,7 @@
       <td><a href="https://simplize.vn/company/GKM" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>7</th>
+      <th>9</th>
       <td>BFC</td>
       <td>BFC - Trả cổ tức Đợt 1 năm 2022 bằng tiền 600 đồng/cổ phiếu</td>
       <td>2022-12-14</td>
@@ -179,14 +213,14 @@
       <td>2023-01-16</td>
       <td>18 days</td>
       <td>19200.0</td>
-      <td>17100.0</td>
-      <td>3.51</td>
-      <td>-10.94</td>
+      <td>17150.0</td>
+      <td>3.50</td>
+      <td>-10.68</td>
       <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=BFC" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
       <td><a href="https://simplize.vn/company/BFC" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>8</th>
+      <th>10</th>
       <td>SAB</td>
       <td>SAB - Trả cổ tức Đợt 2 năm 2022 bằng tiền 1000 đồng/cổ phiếu</td>
       <td>2022-12-07</td>
@@ -203,7 +237,7 @@
       <td><a href="https://simplize.vn/company/SAB" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>9</th>
+      <th>11</th>
       <td>DRC</td>
       <td>DRC - Trả cổ tức Đợt 1 năm 2022 bằng tiền 500 đồng/cổ phiếu</td>
       <td>2022-12-05</td>
@@ -213,9 +247,9 @@
       <td>2023-01-10</td>
       <td>12 days</td>
       <td>22000.0</td>
-      <td>20400.0</td>
-      <td>2.45</td>
-      <td>-7.27</td>
+      <td>20450.0</td>
+      <td>2.44</td>
+      <td>-7.05</td>
       <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=DRC" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
       <td><a href="https://simplize.vn/company/DRC" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
@@ -243,6 +277,40 @@
   <tbody>
     <tr>
       <th>0</th>
+      <td>DDV</td>
+      <td>DDV - Trả cổ tức Đợt 1 năm 2022 bằng tiền 500 đồng/cổ phiếu</td>
+      <td>2022-12-29</td>
+      <td>2023-01-13</td>
+      <td>500.0</td>
+      <td>0.0</td>
+      <td>2023-01-12</td>
+      <td>14 days</td>
+      <td>8900.0</td>
+      <td>8700.0</td>
+      <td>5.75</td>
+      <td>-2.25</td>
+      <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=DDV" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
+      <td><a href="https://simplize.vn/company/DDV" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
+    </tr>
+    <tr>
+      <th>1</th>
+      <td>DPH</td>
+      <td>DPH - Trả cổ tức Đợt 1 năm 2022 bằng tiền 1500 đồng/cổ phiếu</td>
+      <td>2022-12-29</td>
+      <td>2023-01-11</td>
+      <td>1500.0</td>
+      <td>0.0</td>
+      <td>2023-01-10</td>
+      <td>12 days</td>
+      <td>35000.0</td>
+      <td>35000.0</td>
+      <td>4.29</td>
+      <td>0.00</td>
+      <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=DPH" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
+      <td><a href="https://simplize.vn/company/DPH" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
+    </tr>
+    <tr>
+      <th>2</th>
       <td>CSV</td>
       <td>CSV - Trả cổ tức Đợt 1 năm 2022 bằng tiền 1000 đồng/cổ phiếu</td>
       <td>2022-12-27</td>
@@ -259,7 +327,7 @@
       <td><a href="https://simplize.vn/company/CSV" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>1</th>
+      <th>3</th>
       <td>DHA</td>
       <td>DHA - Trả cổ tức Đợt 1 năm 2022 bằng tiền 3000 đồng/cổ phiếu</td>
       <td>2022-12-27</td>
@@ -269,14 +337,14 @@
       <td>2023-01-02</td>
       <td>4 days</td>
       <td>36000.0</td>
-      <td>35850.0</td>
-      <td>8.37</td>
-      <td>-0.42</td>
+      <td>35800.0</td>
+      <td>8.38</td>
+      <td>-0.56</td>
       <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=DHA" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
       <td><a href="https://simplize.vn/company/DHA" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>2</th>
+      <th>4</th>
       <td>QNS</td>
       <td>QNS - Trả cổ tức Đợt 2 năm 2022 bằng tiền 1000 đồng/cổ phiếu</td>
       <td>2022-12-26</td>
@@ -286,14 +354,14 @@
       <td>2023-01-03</td>
       <td>5 days</td>
       <td>36800.0</td>
-      <td>36300.0</td>
-      <td>2.75</td>
-      <td>-1.36</td>
+      <td>36200.0</td>
+      <td>2.76</td>
+      <td>-1.63</td>
       <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=QNS" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
       <td><a href="https://simplize.vn/company/QNS" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>3</th>
+      <th>5</th>
       <td>TTD</td>
       <td>TTD - Trả cổ tức Đợt 2 năm 2022 bằng tiền 1000 đồng/cổ phiếu</td>
       <td>2022-12-23</td>
@@ -310,7 +378,7 @@
       <td><a href="https://simplize.vn/company/TTD" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>4</th>
+      <th>6</th>
       <td>FOX</td>
       <td>Trả cổ tức bằng tiền mặt</td>
       <td>2022-12-22</td>
@@ -327,7 +395,7 @@
       <td><a href="https://simplize.vn/company/FOX" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>5</th>
+      <th>7</th>
       <td>ND2</td>
       <td>ND2 - Trả cổ tức Đợt 1 năm 2022 bằng tiền 1000 đồng/cổ phiếu</td>
       <td>2022-12-22</td>
@@ -344,7 +412,7 @@
       <td><a href="https://simplize.vn/company/ND2" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>6</th>
+      <th>8</th>
       <td>GKM</td>
       <td>GKM - Phát hành cổ phiếu trả cổ tức tỷ lệ 10%</td>
       <td>2022-12-22</td>
@@ -361,7 +429,7 @@
       <td><a href="https://simplize.vn/company/GKM" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>7</th>
+      <th>9</th>
       <td>BFC</td>
       <td>BFC - Trả cổ tức Đợt 1 năm 2022 bằng tiền 600 đồng/cổ phiếu</td>
       <td>2022-12-14</td>
@@ -371,14 +439,14 @@
       <td>2023-01-16</td>
       <td>18 days</td>
       <td>19200.0</td>
-      <td>17100.0</td>
-      <td>3.51</td>
-      <td>-10.94</td>
+      <td>17150.0</td>
+      <td>3.50</td>
+      <td>-10.68</td>
       <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=BFC" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
       <td><a href="https://simplize.vn/company/BFC" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>8</th>
+      <th>10</th>
       <td>SAB</td>
       <td>SAB - Trả cổ tức Đợt 2 năm 2022 bằng tiền 1000 đồng/cổ phiếu</td>
       <td>2022-12-07</td>
@@ -395,7 +463,7 @@
       <td><a href="https://simplize.vn/company/SAB" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>9</th>
+      <th>11</th>
       <td>DRC</td>
       <td>DRC - Trả cổ tức Đợt 1 năm 2022 bằng tiền 500 đồng/cổ phiếu</td>
       <td>2022-12-05</td>
@@ -405,9 +473,9 @@
       <td>2023-01-10</td>
       <td>12 days</td>
       <td>22000.0</td>
-      <td>20400.0</td>
-      <td>2.45</td>
-      <td>-7.27</td>
+      <td>20450.0</td>
+      <td>2.44</td>
+      <td>-7.05</td>
       <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=DRC" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
       <td><a href="https://simplize.vn/company/DRC" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
