--- a/Dividend events.html
+++ b/Dividend events.html
@@ -27,7 +27,7 @@
         <body>
             <div>
                 <h2> Top dividend events </h2>
-                <p><em> 2022-12-29 18:00:22.270925 </em></p>
+                <p><em> 2022-12-29 18:15:23.146508 </em></p>
                 <h4>Sorted by newest notification<h4><table border="1" class="dataframe">
   <thead>
     <tr style="text-align: right;">
@@ -85,6 +85,23 @@
     </tr>
     <tr>
       <th>2</th>
+      <td>PNJ</td>
+      <td>PNJ - Trả cổ tức Đợt 1 năm 2022 bằng tiền 600 đồng/cổ phiếu</td>
+      <td>2022-12-29</td>
+      <td>2023-01-06</td>
+      <td>600.0</td>
+      <td>0.0</td>
+      <td>2023-01-05</td>
+      <td>7 days</td>
+      <td>86000.0</td>
+      <td>86000.0</td>
+      <td>0.70</td>
+      <td>0.00</td>
+      <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=PNJ" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
+      <td><a href="https://simplize.vn/company/PNJ" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
+    </tr>
+    <tr>
+      <th>3</th>
       <td>CSV</td>
       <td>CSV - Trả cổ tức Đợt 1 năm 2022 bằng tiền 1000 đồng/cổ phiếu</td>
       <td>2022-12-27</td>
@@ -101,7 +118,7 @@
       <td><a href="https://simplize.vn/company/CSV" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>3</th>
+      <th>4</th>
       <td>DHA</td>
       <td>DHA - Trả cổ tức Đợt 1 năm 2022 bằng tiền 3000 đồng/cổ phiếu</td>
       <td>2022-12-27</td>
@@ -118,7 +135,7 @@
       <td><a href="https://simplize.vn/company/DHA" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>4</th>
+      <th>5</th>
       <td>QNS</td>
       <td>QNS - Trả cổ tức Đợt 2 năm 2022 bằng tiền 1000 đồng/cổ phiếu</td>
       <td>2022-12-26</td>
@@ -135,7 +152,7 @@
       <td><a href="https://simplize.vn/company/QNS" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>5</th>
+      <th>6</th>
       <td>TTD</td>
       <td>TTD - Trả cổ tức Đợt 2 năm 2022 bằng tiền 1000 đồng/cổ phiếu</td>
       <td>2022-12-23</td>
@@ -152,7 +169,7 @@
       <td><a href="https://simplize.vn/company/TTD" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>6</th>
+      <th>7</th>
       <td>FOX</td>
       <td>Trả cổ tức bằng tiền mặt</td>
       <td>2022-12-22</td>
@@ -169,7 +186,7 @@
       <td><a href="https://simplize.vn/company/FOX" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>7</th>
+      <th>8</th>
       <td>ND2</td>
       <td>ND2 - Trả cổ tức Đợt 1 năm 2022 bằng tiền 1000 đồng/cổ phiếu</td>
       <td>2022-12-22</td>
@@ -186,7 +203,7 @@
       <td><a href="https://simplize.vn/company/ND2" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>8</th>
+      <th>9</th>
       <td>GKM</td>
       <td>GKM - Phát hành cổ phiếu trả cổ tức tỷ lệ 10%</td>
       <td>2022-12-22</td>
@@ -203,7 +220,7 @@
       <td><a href="https://simplize.vn/company/GKM" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>9</th>
+      <th>10</th>
       <td>BFC</td>
       <td>BFC - Trả cổ tức Đợt 1 năm 2022 bằng tiền 600 đồng/cổ phiếu</td>
       <td>2022-12-14</td>
@@ -220,7 +237,7 @@
       <td><a href="https://simplize.vn/company/BFC" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>10</th>
+      <th>11</th>
       <td>SAB</td>
       <td>SAB - Trả cổ tức Đợt 2 năm 2022 bằng tiền 1000 đồng/cổ phiếu</td>
       <td>2022-12-07</td>
@@ -237,7 +254,7 @@
       <td><a href="https://simplize.vn/company/SAB" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>11</th>
+      <th>12</th>
       <td>DRC</td>
       <td>DRC - Trả cổ tức Đợt 1 năm 2022 bằng tiền 500 đồng/cổ phiếu</td>
       <td>2022-12-05</td>
@@ -311,6 +328,23 @@
     </tr>
     <tr>
       <th>2</th>
+      <td>PNJ</td>
+      <td>PNJ - Trả cổ tức Đợt 1 năm 2022 bằng tiền 600 đồng/cổ phiếu</td>
+      <td>2022-12-29</td>
+      <td>2023-01-06</td>
+      <td>600.0</td>
+      <td>0.0</td>
+      <td>2023-01-05</td>
+      <td>7 days</td>
+      <td>86000.0</td>
+      <td>86000.0</td>
+      <td>0.70</td>
+      <td>0.00</td>
+      <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=PNJ" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
+      <td><a href="https://simplize.vn/company/PNJ" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
+    </tr>
+    <tr>
+      <th>3</th>
       <td>CSV</td>
       <td>CSV - Trả cổ tức Đợt 1 năm 2022 bằng tiền 1000 đồng/cổ phiếu</td>
       <td>2022-12-27</td>
@@ -327,7 +361,7 @@
       <td><a href="https://simplize.vn/company/CSV" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>3</th>
+      <th>4</th>
       <td>DHA</td>
       <td>DHA - Trả cổ tức Đợt 1 năm 2022 bằng tiền 3000 đồng/cổ phiếu</td>
       <td>2022-12-27</td>
@@ -344,7 +378,7 @@
       <td><a href="https://simplize.vn/company/DHA" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>4</th>
+      <th>5</th>
       <td>QNS</td>
       <td>QNS - Trả cổ tức Đợt 2 năm 2022 bằng tiền 1000 đồng/cổ phiếu</td>
       <td>2022-12-26</td>
@@ -361,7 +395,7 @@
       <td><a href="https://simplize.vn/company/QNS" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>5</th>
+      <th>6</th>
       <td>TTD</td>
       <td>TTD - Trả cổ tức Đợt 2 năm 2022 bằng tiền 1000 đồng/cổ phiếu</td>
       <td>2022-12-23</td>
@@ -378,7 +412,7 @@
       <td><a href="https://simplize.vn/company/TTD" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>6</th>
+      <th>7</th>
       <td>FOX</td>
       <td>Trả cổ tức bằng tiền mặt</td>
       <td>2022-12-22</td>
@@ -395,7 +429,7 @@
       <td><a href="https://simplize.vn/company/FOX" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>7</th>
+      <th>8</th>
       <td>ND2</td>
       <td>ND2 - Trả cổ tức Đợt 1 năm 2022 bằng tiền 1000 đồng/cổ phiếu</td>
       <td>2022-12-22</td>
@@ -412,7 +446,7 @@
       <td><a href="https://simplize.vn/company/ND2" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>8</th>
+      <th>9</th>
       <td>GKM</td>
       <td>GKM - Phát hành cổ phiếu trả cổ tức tỷ lệ 10%</td>
       <td>2022-12-22</td>
@@ -429,7 +463,7 @@
       <td><a href="https://simplize.vn/company/GKM" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>9</th>
+      <th>10</th>
       <td>BFC</td>
       <td>BFC - Trả cổ tức Đợt 1 năm 2022 bằng tiền 600 đồng/cổ phiếu</td>
       <td>2022-12-14</td>
@@ -446,7 +480,7 @@
       <td><a href="https://simplize.vn/company/BFC" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>10</th>
+      <th>11</th>
       <td>SAB</td>
       <td>SAB - Trả cổ tức Đợt 2 năm 2022 bằng tiền 1000 đồng/cổ phiếu</td>
       <td>2022-12-07</td>
@@ -463,7 +497,7 @@
       <td><a href="https://simplize.vn/company/SAB" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>11</th>
+      <th>12</th>
       <td>DRC</td>
       <td>DRC - Trả cổ tức Đợt 1 năm 2022 bằng tiền 500 đồng/cổ phiếu</td>
       <td>2022-12-05</td>
