--- a/Dividend events.html
+++ b/Dividend events.html
@@ -27,7 +27,7 @@
         <body>
             <div>
                 <h2> Top dividend events </h2>
-                <p><em> 2022-12-30 09:00:28.481798 </em></p>
+                <p><em> 2022-12-30 09:30:28.309560 </em></p>
                 <h4>Sorted by newest notification<h4><table border="1" class="dataframe">
   <thead>
     <tr style="text-align: right;">
@@ -51,6 +51,23 @@
   <tbody>
     <tr>
       <th>0</th>
+      <td>VWS</td>
+      <td>VWS - Trả cổ tức Đợt 1 năm 2022 bằng tiền 400 đồng/cổ phiếu</td>
+      <td>2022-12-30</td>
+      <td>2023-01-12</td>
+      <td>400.0</td>
+      <td>0.0</td>
+      <td>2023-01-11</td>
+      <td>12 days</td>
+      <td>17800.0</td>
+      <td>17800.0</td>
+      <td>2.25</td>
+      <td>0.00</td>
+      <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=VWS" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
+      <td><a href="https://simplize.vn/company/VWS" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
+    </tr>
+    <tr>
+      <th>1</th>
       <td>DDV</td>
       <td>DDV - Trả cổ tức Đợt 1 năm 2022 bằng tiền 500 đồng/cổ phiếu</td>
       <td>2022-12-29</td>
@@ -67,7 +84,7 @@
       <td><a href="https://simplize.vn/company/DDV" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>1</th>
+      <th>2</th>
       <td>DPH</td>
       <td>DPH - Trả cổ tức Đợt 1 năm 2022 bằng tiền 1500 đồng/cổ phiếu</td>
       <td>2022-12-29</td>
@@ -84,7 +101,7 @@
       <td><a href="https://simplize.vn/company/DPH" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>2</th>
+      <th>3</th>
       <td>PNJ</td>
       <td>PNJ - Trả cổ tức Đợt 1 năm 2022 bằng tiền 600 đồng/cổ phiếu</td>
       <td>2022-12-29</td>
@@ -94,14 +111,14 @@
       <td>2023-01-05</td>
       <td>6 days</td>
       <td>86000.0</td>
-      <td>87500.0</td>
-      <td>0.69</td>
-      <td>1.74</td>
+      <td>86300.0</td>
+      <td>0.70</td>
+      <td>0.35</td>
       <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=PNJ" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
       <td><a href="https://simplize.vn/company/PNJ" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>3</th>
+      <th>4</th>
       <td>CSV</td>
       <td>CSV - Trả cổ tức Đợt 1 năm 2022 bằng tiền 1000 đồng/cổ phiếu</td>
       <td>2022-12-27</td>
@@ -118,7 +135,7 @@
       <td><a href="https://simplize.vn/company/CSV" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>4</th>
+      <th>5</th>
       <td>DHA</td>
       <td>DHA - Trả cổ tức Đợt 1 năm 2022 bằng tiền 3000 đồng/cổ phiếu</td>
       <td>2022-12-27</td>
@@ -128,14 +145,14 @@
       <td>2023-01-02</td>
       <td>3 days</td>
       <td>36000.0</td>
-      <td>36300.0</td>
-      <td>8.26</td>
-      <td>0.83</td>
+      <td>36600.0</td>
+      <td>8.20</td>
+      <td>1.67</td>
       <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=DHA" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
       <td><a href="https://simplize.vn/company/DHA" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>5</th>
+      <th>6</th>
       <td>QNS</td>
       <td>QNS - Trả cổ tức Đợt 2 năm 2022 bằng tiền 1000 đồng/cổ phiếu</td>
       <td>2022-12-26</td>
@@ -152,7 +169,7 @@
       <td><a href="https://simplize.vn/company/QNS" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>6</th>
+      <th>7</th>
       <td>FOX</td>
       <td>Trả cổ tức bằng tiền mặt</td>
       <td>2022-12-22</td>
@@ -169,7 +186,7 @@
       <td><a href="https://simplize.vn/company/FOX" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>7</th>
+      <th>8</th>
       <td>ND2</td>
       <td>ND2 - Trả cổ tức Đợt 1 năm 2022 bằng tiền 1000 đồng/cổ phiếu</td>
       <td>2022-12-22</td>
@@ -186,7 +203,7 @@
       <td><a href="https://simplize.vn/company/ND2" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>8</th>
+      <th>9</th>
       <td>BFC</td>
       <td>BFC - Trả cổ tức Đợt 1 năm 2022 bằng tiền 600 đồng/cổ phiếu</td>
       <td>2022-12-14</td>
@@ -203,7 +220,7 @@
       <td><a href="https://simplize.vn/company/BFC" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>9</th>
+      <th>10</th>
       <td>SAB</td>
       <td>SAB - Trả cổ tức Đợt 2 năm 2022 bằng tiền 1000 đồng/cổ phiếu</td>
       <td>2022-12-07</td>
@@ -213,14 +230,14 @@
       <td>2023-03-01</td>
       <td>61 days</td>
       <td>177327.0</td>
-      <td>168000.0</td>
-      <td>0.60</td>
-      <td>-5.26</td>
+      <td>173900.0</td>
+      <td>0.58</td>
+      <td>-1.93</td>
       <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=SAB" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
       <td><a href="https://simplize.vn/company/SAB" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>10</th>
+      <th>11</th>
       <td>DRC</td>
       <td>DRC - Trả cổ tức Đợt 1 năm 2022 bằng tiền 500 đồng/cổ phiếu</td>
       <td>2022-12-05</td>
@@ -230,9 +247,9 @@
       <td>2023-01-10</td>
       <td>11 days</td>
       <td>22000.0</td>
-      <td>20600.0</td>
-      <td>2.43</td>
-      <td>-6.36</td>
+      <td>20750.0</td>
+      <td>2.41</td>
+      <td>-5.68</td>
       <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=DRC" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
       <td><a href="https://simplize.vn/company/DRC" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
@@ -260,6 +277,23 @@
   <tbody>
     <tr>
       <th>0</th>
+      <td>VWS</td>
+      <td>VWS - Trả cổ tức Đợt 1 năm 2022 bằng tiền 400 đồng/cổ phiếu</td>
+      <td>2022-12-30</td>
+      <td>2023-01-12</td>
+      <td>400.0</td>
+      <td>0.0</td>
+      <td>2023-01-11</td>
+      <td>12 days</td>
+      <td>17800.0</td>
+      <td>17800.0</td>
+      <td>2.25</td>
+      <td>0.00</td>
+      <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=VWS" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
+      <td><a href="https://simplize.vn/company/VWS" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
+    </tr>
+    <tr>
+      <th>1</th>
       <td>DDV</td>
       <td>DDV - Trả cổ tức Đợt 1 năm 2022 bằng tiền 500 đồng/cổ phiếu</td>
       <td>2022-12-29</td>
@@ -276,7 +310,7 @@
       <td><a href="https://simplize.vn/company/DDV" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>1</th>
+      <th>2</th>
       <td>DPH</td>
       <td>DPH - Trả cổ tức Đợt 1 năm 2022 bằng tiền 1500 đồng/cổ phiếu</td>
       <td>2022-12-29</td>
@@ -293,7 +327,7 @@
       <td><a href="https://simplize.vn/company/DPH" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>2</th>
+      <th>3</th>
       <td>PNJ</td>
       <td>PNJ - Trả cổ tức Đợt 1 năm 2022 bằng tiền 600 đồng/cổ phiếu</td>
       <td>2022-12-29</td>
@@ -303,14 +337,14 @@
       <td>2023-01-05</td>
       <td>6 days</td>
       <td>86000.0</td>
-      <td>87500.0</td>
-      <td>0.69</td>
-      <td>1.74</td>
+      <td>86300.0</td>
+      <td>0.70</td>
+      <td>0.35</td>
       <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=PNJ" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
       <td><a href="https://simplize.vn/company/PNJ" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>3</th>
+      <th>4</th>
       <td>CSV</td>
       <td>CSV - Trả cổ tức Đợt 1 năm 2022 bằng tiền 1000 đồng/cổ phiếu</td>
       <td>2022-12-27</td>
@@ -327,7 +361,7 @@
       <td><a href="https://simplize.vn/company/CSV" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>4</th>
+      <th>5</th>
       <td>DHA</td>
       <td>DHA - Trả cổ tức Đợt 1 năm 2022 bằng tiền 3000 đồng/cổ phiếu</td>
       <td>2022-12-27</td>
@@ -337,14 +371,14 @@
       <td>2023-01-02</td>
       <td>3 days</td>
       <td>36000.0</td>
-      <td>36300.0</td>
-      <td>8.26</td>
-      <td>0.83</td>
+      <td>36600.0</td>
+      <td>8.20</td>
+      <td>1.67</td>
       <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=DHA" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
       <td><a href="https://simplize.vn/company/DHA" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>5</th>
+      <th>6</th>
       <td>QNS</td>
       <td>QNS - Trả cổ tức Đợt 2 năm 2022 bằng tiền 1000 đồng/cổ phiếu</td>
       <td>2022-12-26</td>
@@ -361,7 +395,7 @@
       <td><a href="https://simplize.vn/company/QNS" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>6</th>
+      <th>7</th>
       <td>FOX</td>
       <td>Trả cổ tức bằng tiền mặt</td>
       <td>2022-12-22</td>
@@ -378,7 +412,7 @@
       <td><a href="https://simplize.vn/company/FOX" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>7</th>
+      <th>8</th>
       <td>ND2</td>
       <td>ND2 - Trả cổ tức Đợt 1 năm 2022 bằng tiền 1000 đồng/cổ phiếu</td>
       <td>2022-12-22</td>
@@ -395,7 +429,7 @@
       <td><a href="https://simplize.vn/company/ND2" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>8</th>
+      <th>9</th>
       <td>BFC</td>
       <td>BFC - Trả cổ tức Đợt 1 năm 2022 bằng tiền 600 đồng/cổ phiếu</td>
       <td>2022-12-14</td>
@@ -412,7 +446,7 @@
       <td><a href="https://simplize.vn/company/BFC" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>9</th>
+      <th>10</th>
       <td>SAB</td>
       <td>SAB - Trả cổ tức Đợt 2 năm 2022 bằng tiền 1000 đồng/cổ phiếu</td>
       <td>2022-12-07</td>
@@ -422,14 +456,14 @@
       <td>2023-03-01</td>
       <td>61 days</td>
       <td>177327.0</td>
-      <td>168000.0</td>
-      <td>0.60</td>
-      <td>-5.26</td>
+      <td>173900.0</td>
+      <td>0.58</td>
+      <td>-1.93</td>
       <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=SAB" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
       <td><a href="https://simplize.vn/company/SAB" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>10</th>
+      <th>11</th>
       <td>DRC</td>
       <td>DRC - Trả cổ tức Đợt 1 năm 2022 bằng tiền 500 đồng/cổ phiếu</td>
       <td>2022-12-05</td>
@@ -439,9 +473,9 @@
       <td>2023-01-10</td>
       <td>11 days</td>
       <td>22000.0</td>
-      <td>20600.0</td>
-      <td>2.43</td>
-      <td>-6.36</td>
+      <td>20750.0</td>
+      <td>2.41</td>
+      <td>-5.68</td>
       <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=DRC" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
       <td><a href="https://simplize.vn/company/DRC" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
