--- a/Dividend events.html
+++ b/Dividend events.html
@@ -27,7 +27,7 @@
         <body>
             <div>
                 <h2> Top dividend events </h2>
-                <p><em> 2023-02-23 11:00:29.695624 </em></p>
+                <p><em> 2023-02-23 11:15:26.644312 </em></p>
                 <h4>Sorted by newest notification<h4><table border="1" class="dataframe">
   <thead>
     <tr style="text-align: right;">
@@ -52,7 +52,7 @@
     <tr>
       <th>0</th>
       <td>SAS</td>
-      <td>Trả cổ tức bằng tiền mặt</td>
+      <td>SAS - Trả cổ tức Đợt 1 năm 2022 bằng tiền 1000 đồng/cổ phiếu</td>
       <td>2023-02-23</td>
       <td>2023-03-08</td>
       <td>1000.0</td>
@@ -60,8 +60,8 @@
       <td>2023-03-07</td>
       <td>12 days</td>
       <td>27800.0</td>
-      <td>27.8</td>
-      <td>3597.12</td>
+      <td>27.5</td>
+      <td>3636.36</td>
       <td>-99.90</td>
       <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=SAS" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
       <td><a href="https://simplize.vn/company/SAS" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
@@ -179,8 +179,8 @@
       <td>2023-02-27</td>
       <td>4 days</td>
       <td>13900.0</td>
-      <td>13.8</td>
-      <td>3623.19</td>
+      <td>13.7</td>
+      <td>3649.64</td>
       <td>-99.90</td>
       <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=PBC" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
       <td><a href="https://simplize.vn/company/PBC" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
@@ -230,8 +230,8 @@
       <td>2023-02-27</td>
       <td>4 days</td>
       <td>72900.0</td>
-      <td>70.6</td>
-      <td>1416.43</td>
+      <td>70.3</td>
+      <td>1422.48</td>
       <td>-99.90</td>
       <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=REE" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
       <td><a href="https://simplize.vn/company/REE" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
@@ -264,8 +264,8 @@
       <td>2023-03-01</td>
       <td>6 days</td>
       <td>177327.0</td>
-      <td>185.3</td>
-      <td>539.67</td>
+      <td>185.0</td>
+      <td>540.54</td>
       <td>-99.90</td>
       <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=SAB" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
       <td><a href="https://simplize.vn/company/SAB" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
@@ -295,7 +295,7 @@
     <tr>
       <th>0</th>
       <td>SAS</td>
-      <td>Trả cổ tức bằng tiền mặt</td>
+      <td>SAS - Trả cổ tức Đợt 1 năm 2022 bằng tiền 1000 đồng/cổ phiếu</td>
       <td>2023-02-23</td>
       <td>2023-03-08</td>
       <td>1000.0</td>
@@ -303,8 +303,8 @@
       <td>2023-03-07</td>
       <td>12 days</td>
       <td>27800.0</td>
-      <td>27.8</td>
-      <td>3597.12</td>
+      <td>27.5</td>
+      <td>3636.36</td>
       <td>-99.90</td>
       <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=SAS" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
       <td><a href="https://simplize.vn/company/SAS" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
@@ -422,8 +422,8 @@
       <td>2023-02-27</td>
       <td>4 days</td>
       <td>13900.0</td>
-      <td>13.8</td>
-      <td>3623.19</td>
+      <td>13.7</td>
+      <td>3649.64</td>
       <td>-99.90</td>
       <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=PBC" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
       <td><a href="https://simplize.vn/company/PBC" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
@@ -473,8 +473,8 @@
       <td>2023-02-27</td>
       <td>4 days</td>
       <td>72900.0</td>
-      <td>70.6</td>
-      <td>1416.43</td>
+      <td>70.3</td>
+      <td>1422.48</td>
       <td>-99.90</td>
       <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=REE" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
       <td><a href="https://simplize.vn/company/REE" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
@@ -507,8 +507,8 @@
       <td>2023-03-01</td>
       <td>6 days</td>
       <td>177327.0</td>
-      <td>185.3</td>
-      <td>539.67</td>
+      <td>185.0</td>
+      <td>540.54</td>
       <td>-99.90</td>
       <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=SAB" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
       <td><a href="https://simplize.vn/company/SAB" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
